--- a/nginx/sites-available/isuride.conf
+++ b/nginx/sites-available/isuride.conf
@@ -41,12 +41,12 @@ server {
     }
     location /api/ {
         proxy_set_header Host $host;
-        proxy_pass http://app;
+        proxy_pass https://app;
     }
     location /api/internal/ {
         allow 127.0.0.1;
         deny all;
         proxy_set_header Host $host;
-        proxy_pass http://app;
+        proxy_pass https://app;
     }
 }
