--- a/nginx/sites-available/isuride.conf
+++ b/nginx/sites-available/isuride.conf
@@ -1,6 +1,6 @@
 upstream app {
     keepalive 1024;
-    server 192.168.0.12;
+    server 192.168.0.12:8080;
 }
 
 server {
@@ -41,12 +41,12 @@ server {
     }
     location /api/ {
         proxy_set_header Host $host;
-        proxy_pass https://app;
+        proxy_pass http://app;
     }
     location /api/internal/ {
         allow 127.0.0.1;
         deny all;
         proxy_set_header Host $host;
-        proxy_pass https://app;
+        proxy_pass http://app;
     }
 }
