--- a/nginx/sites-available/isuride.conf
+++ b/nginx/sites-available/isuride.conf
@@ -1,3 +1,8 @@
+upstream app {
+    keepalive 1024;
+    server unix:/tmp/isucari.sock;
+}
+
 server {
     listen 80 default_server;
     server_name _;
@@ -36,12 +41,12 @@ server {
     }
     location /api/ {
         proxy_set_header Host $host;
-        proxy_pass http://192.168.0.12:8080;
+        proxy_pass http://app;
     }
     location /api/internal/ {
         allow 127.0.0.1;
         deny all;
         proxy_set_header Host $host;
-        proxy_pass http://192.168.0.12:8080;
+        proxy_pass http://app;
     }
 }
