--- a/nginx/sites-available/isuride.conf
+++ b/nginx/sites-available/isuride.conf
@@ -1,8 +1,3 @@
-upstream app {
-    keepalive 1024;
-    server unix:/tmp/isucari.sock;
-}
-
 server {
     listen 80 default_server;
     server_name _;
@@ -41,12 +36,12 @@ server {
     }
     location /api/ {
         proxy_set_header Host $host;
-        proxy_pass http://app;
+        proxy_pass http://localhost:8080;
     }
     location /api/internal/ {
         allow 127.0.0.1;
         deny all;
         proxy_set_header Host $host;
-        proxy_pass http://app;
+        proxy_pass http://localhost:8080;
     }
 }
