--- a/nginx/sites-available/isuride.conf
+++ b/nginx/sites-available/isuride.conf
@@ -37,6 +37,8 @@ server {
     client_max_body_size 10m;
     root /home/isucon/webapp/public/;
     location / {
+        expires 24h;
+        add_header Cache-Control public, max-age=86400, immutable;
         try_files $uri /index.html;
     }
     location /api/ {
