--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,6 @@
 user www-data;
-worker_processes auto;
+worker_processes 2;
+worker_cpu_affinity auto;
 pid /run/nginx.pid;
 error_log /var/log/nginx/error.log;
 include /etc/nginx/modules-enabled/*.conf;
@@ -14,12 +15,13 @@ http {
     default_type application/octet-stream;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
     access_log /var/log/nginx/access.log;
     include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/sites-enabled/*;
-    tcp_nodelay on;
+    tcp_nodelay off;
     server_tokens off;
-    open_file_cache max=100 inactive=20s;
+    open_file_cache max=10000 inactive=20s;
     proxy_buffers 100 32k;
     proxy_buffer_size 32k;
     keepalive_timeout 65;
