--- a/nginx/sites-available/isuride.conf
+++ b/nginx/sites-available/isuride.conf
@@ -38,7 +38,7 @@ server {
     root /home/isucon/webapp/public/;
     location / {
         expires 24h;
-        add_header Cache-Control public, max-age=86400, immutable;
+        add_header Cache-Control "public, max-age=86400, immutable";
         try_files $uri /index.html;
     }
     location /api/ {
