--- a/nginx/sites-available/isuride.conf
+++ b/nginx/sites-available/isuride.conf
@@ -33,7 +33,7 @@ server {
     ssl_certificate /etc/nginx/tls/_.xiv.isucon.net.crt;
     ssl_certificate_key /etc/nginx/tls/_.xiv.isucon.net.key;
     ssl_protocols TLSv1.3 TLSv1.2;
-    ssl_prefer_server_ciphers off;
+    ssl_verify_client off;
     client_max_body_size 10m;
     root /home/isucon/webapp/public/;
     location / {
