--- a/nginx/sites-available/isuride.conf
+++ b/nginx/sites-available/isuride.conf
@@ -35,6 +35,10 @@ server {
     ssl_protocols TLSv1.3 TLSv1.2;
     root /home/isucon/webapp/public/;
     location / {
+        gzip_static on;
+        gzip_types *;
+        gzip_disable "msie6";
+        
         expires 24h;
         add_header Cache-Control "public, max-age=86400, immutable";
         try_files $uri /index.html;
