--- a/nginx/sites-available/isuride.conf
+++ b/nginx/sites-available/isuride.conf
@@ -27,7 +27,7 @@ server {
     }
 }
 server {
-    listen 443 ssl;
+    listen 443 ssl http2;
     server_name xiv.isucon.net;
     server_name *.xiv.isucon.net;
     ssl_certificate /etc/nginx/tls/_.xiv.isucon.net.crt;
